Remove unused code and resolve some linter issues